OpenApiにエンドポイントを追加
